# xstate4cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  example_loop.hpp  fetch.cpp  nfc_session.cpp  toggle.cpp  traffic_light.cpp
include/xstate/: actor.hpp  actor_logic.hpp  errors.hpp  event.hpp  json.hpp  snapshot.hpp  state_value.hpp  system.hpp  xstate.hpp
include/xstate/adapters/manual/: manual_executor.hpp  test_clock.hpp
include/xstate/adapters/posix/: event_loop.hpp
include/xstate/adapters/win32/: event_loop.hpp
include/xstate/detail/: json_value.hpp  json_writer.hpp
include/xstate/interfaces/: clock.hpp  executor.hpp
include/xstate/logic/: async.hpp  callback.hpp  transition.hpp
include/xstate/machine/: actions.hpp  config.hpp  guards.hpp  machine.hpp  state_node.hpp
tests/: CMakeLists.txt  test_actor.cpp  test_always_raise.cpp  test_config.cpp  test_delays.cpp  test_event.cpp  test_history.cpp  test_initial.cpp  test_initial_transitions.cpp  test_inspection.cpp  test_invoke_spawn.cpp  test_json.cpp  test_logics.cpp  test_machine_parse.cpp  test_manual_adapters.cpp  test_parallel_final.cpp  test_persistence.cpp  test_sanity.cpp  test_state_value.cpp  test_transition_flat.cpp  test_transition_hierarchical.cpp  test_umbrella.cpp  test_upstream_guards_actions_eventless.cpp  test_upstream_history_after_invoke.cpp  test_upstream_parallel_final.cpp
tests/adapters/: test_event_loop.cpp
